k8s/ms-sql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mssql
  template:
    metadata:
      labels:
        component: mssql
    spec:
      # Sets up the request on the pod to reach out to kubernetes saying I need some types of long term storage
      volumes:
        - name: mssql-storage
          persistentVolumeClaim:
            # From the database-persistent-volume-claim.yaml
            claimName: database-formbuilder-persistent-volume-claim
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2017-latest-ubuntu # microsoft/mssql-server-linux:2017-latest
          ports:
            - containerPort: 1433
          # Here is how I want to use it(pvc) inside my container
          volumeMounts:
              # Volumes has to be identical with volumeMounts
            - name: mssql-storage
              # Where inside the container should the storage be made availble
              # This will actually be stored inside the volumes. Has to be default storage path for the db
              mountPath: /var/opt/mssql
          resources:
            # Ensures that the sum of the node capacity is less than the capacity of the node
            requests:
              memory: "64Mi"
              cpu: "250M"
            limits:
              # If the container reach its memory limits it will be terminated and then restarted
              memory: "128Mi"
              # Might or might not be allowed to exceed its cpu limits
              cpu: "500m" # 0.5 cpu
