k8s/ms-sql-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mssql # Match label in ms-sql-deployment
  ports:
    - port: 1433
      targetPort: 1433
